force-app/main/default/objects/Book_Copy__c/Book_Copy__c.object-meta.xml
<CustomObject>
    <label>Book Copy</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Call Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>