force-app/main/default/objects/Book_Copy__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>( NOW() -  CreatedDate )*(1/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How old is this book?</inlineHelpText>
    <label>Age of Copy (in years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>