force-app/main/default/objects/Book_Copy__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Book Copies</relationshipLabel>
    <relationshipName>Book_Copies</relationshipName>
    <type>Lookup</type>
</CustomField>