force-app/main/default/objects/Book_Copy__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The branch this copy currently resides in</description>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Book Copies</relationshipLabel>
    <relationshipName>Book_Copies</relationshipName>
    <type>Lookup</type>
</CustomField>