force-app/main/default/objects/Book_Copy__c/fields/Flagged_for_Removal__c.field-meta.xml
<CustomField>
    <fullName>Flagged_for_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is checked if a book copy is flagged for removal from circulation. Books removed from circulation can be thrown away, donated, or sold at the next book sale.</inlineHelpText>
    <label>Flagged for Removal</label>
    <type>Checkbox</type>
</CustomField>