force-app/main/default/objects/Book_Copy__c/fields/Holder__c.field-meta.xml
<CustomField>
    <fullName>Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is filled in, then the book copy has a hold on it by a Borrower and should not be renewed or checked out to anyone but that Borrower.</inlineHelpText>
    <label>Holder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Book Copies (Contact)</relationshipLabel>
    <relationshipName>Book_Copies1</relationshipName>
    <type>Lookup</type>
</CustomField>