force-app/main/default/objects/Book_Copy__c/validationRules/Book_Copy_Holding.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_Copy_Holding</fullName>
    <active>false</active>
    <description>Prevents book copies from being checked out or renewed except by Holder.</description>
    <errorConditionFormula>IF( Holder__c  &lt;&gt; null  &amp;&amp;   Borrower__c  &lt;&gt; null  &amp;&amp; Borrower__c  &lt;&gt;  Holder__c, true, false)</errorConditionFormula>
    <errorDisplayField>Borrower__c</errorDisplayField>
    <errorMessage>Book copies on hold cannot be checked out or renewed except by Holder.</errorMessage>
</ValidationRule>