force-app/main/default/objects/Book_Copy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Borrower__c</columns>
    <columns>Branch__c</columns>
    <columns>Age__c</columns>
    <columns>Condition__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>