force-app/main/default/objects/Book_Copy__c/listViews/Book_Inventory.listView-meta.xml
<ListView>
    <fullName>Book_Inventory</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Branch__c</columns>
    <columns>Borrower__c</columns>
    <columns>Holder__c</columns>
    <columns>Condition__c</columns>
    <columns>Flagged_for_Removal__c</columns>
    <filterScope>Everything</filterScope>
    <label>Book Inventory</label>
</ListView>