force-app/main/default/objects/Book_Copy__c/listViews/Books_in_Library.listView-meta.xml
<ListView>
    <fullName>Books_in_Library</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Branch__c</columns>
    <columns>Condition__c</columns>
    <columns>Holder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Books in Library</label>
</ListView>